--- a/src/styles/Layout.css
+++ b/src/styles/Layout.css
@@ -1,6 +1,6 @@
 .sidebar {
   height: 100vh !important;
-  background-color: #2e3200;
+  background-color: #a93312;
   box-shadow: 0 0 2px gray;
   color: white;
 }
