--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@
 .navbar,
 .nav-link,
 .navbar-brand {
-  background-color: black !important;
+  background-color: rgb(32, 32, 32) !important;
   color: white !important;
 }
 
