--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   height: 100vh;
 }
 /* ======= loader ====== */
-.loader-container{
+.loader-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,9 +26,9 @@
   background-color: rgba(0, 0, 0, 0.3);
 }
 .loader {
-  background-color:rgba(0, 0, 0, 0.3) ;
+  background-color: rgba(0, 0, 0, 0.3);
 }
-.loader{
+.loader {
   width: 3rem;
   height: 3rem;
   border: 5px solid #fff;
@@ -37,6 +37,7 @@
   border-bottom-color: #ff3d00;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
+  background-color: #e06091;
 }
 
 @keyframes rotation {
@@ -56,5 +57,3 @@
   background-color: rgb(32, 32, 32) !important;
   color: white !important;
 }
-
-
